# talktoinfra

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SUMMARY.md  DOCKER_OPTIMIZATION_SUMMARY.md  LICENSE  Makefile  README.md  STATUS.md  TASKLIST.md  TEST_MIGRATION_REPORT.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  test_enterprise.py
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/src/: config.py  main.py
agent/src/catalog/: registry.py
agent/src/client/: orchestrator_client.py
agent/src/connectors/: ad.py  aws.py  base.py  dns.py  k8s.py  registry.py  ssh.py
agent/tests/: test_dns.py
cli/: Dockerfile  pyproject.toml
cli/talktoinfra_cli/: config.py  main.py
cli/talktoinfra_cli/client/: api.py
cli/talktoinfra_cli/commands/: ask.py  chat.py  config.py  history.py  netscan.py  session.py  status.py
cli/talktoinfra_cli/ui/: chat.py
cli/tests/: test_config.py
docs/: ARCHITECTURE-DATA.md  ARCHITECTURE-SERVICES.md  ARCHITECTURE.md  DEPLOYMENT.md  DPA_TEMPLATE.md  ENTERPRISE_PLAN.md  IDEA.md  PRD.md  PROJECT_STRUCTURE.md
docs/ADR/: ADR-001-no-mock-data.md
logs/: action-engine.pid  agent-service.pid  ai-router.pid  api-gateway.pid  audit-service.pid  discovery-service.pid  frontend.pid  ingestion-service.pid  policy-engine.pid
orchestrator/: Dockerfile  alembic.ini  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/src/: config.py  main.py
orchestrator/src/api/: deps.py  ratelimit.py  router.py  versioning.py
orchestrator/src/api/v1/: admin.py  agent_register.py  agents.py  audit.py  chat.py  discover.py  health.py  network_scan.py  scim.py  sessions.py  tools.py
orchestrator/src/api/ws/: chat.py
orchestrator/src/auth/: agent_identity.py  deps.py  domain_verify.py  jwt.py  mfa.py  oidc.py  rbac.py  saml.py
orchestrator/src/compliance/: residency.py
orchestrator/src/core/: agent_engine.py  agent_registry.py  graph.py  memory.py  router.py  state.py
orchestrator/src/core/executors/: __init__.py  ad.py  cloud.py  k8s.py  monitoring.py  network.py  onprem.py
orchestrator/src/deploy/: backup.py  failover.py
orchestrator/src/discovery/: network_scanner.py
orchestrator/src/knowledge/: retriever.py  vector_store.py
orchestrator/src/llm/: anthropic_provider.py  completions.py  ollama_provider.py  openai_provider.py  provider.py  registry.py
orchestrator/src/models/: chat.py  session.py
orchestrator/src/observability/: cost_tracker.py  heartbeat.py  siem.py  tracing.py
orchestrator/src/policy/: autonomy.py  drift.py  engine.py
orchestrator/src/safety/: approvals.py  breakers.py  gate.py  guardrails.py  redactor.py  tiers.py  validator.py
orchestrator/src/storage/: checkpoint.py  database.py  models.py  repository.py
orchestrator/tests/: conftest.py  test_agent_register.py  test_catalog.py  test_enterprise.py  test_llm_providers.py  test_redactor.py  test_safety_gate.py  test_tenant_isolation.py
scripts/: check-no-mock.py  health-check.sh  local-dev.sh  quickstart.sh  run-tests.ps1  run-tests.sh  soc2_evidence.py
shared/: pyproject.toml
tests/: conftest.py
web/: Dockerfile  Dockerfile.web  index.html  nginx.conf  package.json
(+464 files in other folders)
