[project]
name = "talktoinfra"
version = "0.1.0"
description = "AI-Native Infrastructure Copilot — talk to your infrastructure in natural language"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
  { name = "TalkToInfra Contributors" },
]

[project.urls]
homepage = "https://github.com/talktoinfra/talktoinfra"
documentation = "https://talktoinfra.dev"
repository = "https://github.com/talktoinfra/talktoinfra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
strict = false
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
