[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "talktoinfra-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "talktoinfra-shared",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "grpcio>=1.62",
    "kubernetes>=30.0",
    "boto3>=1.34",
    "dnspython>=2.6",
    "asyncssh>=2.16",
    "ldap3>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
