[project]
name = "talktoinfra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "talktoinfra-shared",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
talktoinfra = "talktoinfra_cli.main:cli"

[tool.setuptools.packages.find]
include = ["talktoinfra_cli*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
